fix: unit gap bottom

--- a/lms/static/sass/funix/unit/_build.scss
+++ b/lms/static/sass/funix/unit/_build.scss
@@ -1,18 +1,18 @@
-@import '../base/build';
+@import "../base/build";
 
-@import 'mixins/typography';
-@import 'mixins/problem';
-@import 'mixins/table';
-@import 'mixins/details';
-@import 'mixins/image';
-@import 'mixins/buttons';
-@import 'mixins/common';
+@import "mixins/typography";
+@import "mixins/problem";
+@import "mixins/table";
+@import "mixins/details";
+@import "mixins/image";
+@import "mixins/buttons";
+@import "mixins/common";
 
-@import 'components/xmodule-HtmlBlock';
-@import 'components/xmodule-ProblemBlock';
-@import 'components/xmodule-VideoBlock';
+@import "components/xmodule-HtmlBlock";
+@import "components/xmodule-ProblemBlock";
+@import "components/xmodule-VideoBlock";
 
-// Remove margin, padding, border of each component 
+// Remove margin, padding, border of each component
 .course-wrapper .course-content .vert-mod .vert {
     margin: 0;
     padding: 0;
@@ -26,4 +26,9 @@
 // override #content margin top of explore courses
 #content {
     margin-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
+#main {
+    padding-bottom: 0 !important;
 }
